# vertebra

./: .cursorignore  .gitignore  .textlintrc  AGENTS.md  JULES_PROMPT.md  README.md  REFACTORING_HANDOFF.md  SPEC.md  TESTS.md  fix_icon_bg.cjs  fix_icon_bg.mjs  fix_icon_bg.py  index.html  package-lock.json  package.json  playwright.config.ts  task.md  test-results.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: release.yml
e2e/: basic.spec.ts  export.spec.ts  functional.spec.ts  persistence.spec.ts
e2e/mocks/: tauri.ts
e2e/temp_archived/: export.spec.ts  focus-mode.spec.ts  folder-navigation.spec.ts  functional.spec.ts  global-search.spec.ts  outline.spec.ts  persistence.spec.ts  split-view.spec.ts  undo-redo.spec.ts
src/: App.css  App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CommandsList.tsx  Editor.test.tsx  Editor.tsx  ExportModal.test.tsx  ExportModal.tsx  ModalFooter.tsx  ModalHeader.tsx  ModalWindow.tsx  RichEditor.test.tsx  RichEditor.tsx  SearchModal.css  SearchModal.test.tsx  SearchModal.tsx  SettingsModal.css  SettingsModal.test.tsx  SettingsModal.tsx  Sidebar.test.tsx  Sidebar.tsx  SlashCommand.ts  SplashScreen.css  SplashScreen.tsx  StatusBar.test.tsx  StatusBar.tsx  suggestion.ts
src/contexts/: LanguageContext.test.tsx  LanguageContext.tsx  ThemeContext.test.tsx  ThemeContext.tsx
src/future/: README.md
src/hooks/: useDebounce.test.tsx  useFocusMode.ts  useFontSize.ts  (+9 more)
(+51 files in other folders)
