[package]
name = "vertebra"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vertebra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-window-state = "2"
tauri-plugin-os = "2.3.2"

# Export functionality
docx-rs = "0.4"
pulldown-cmark = "0.11"

# 開発ビルドのパフォーマンス改善設定
[profile.dev]
incremental = true # 増分コンパイルを有効化

[profile.dev.package."*"]
opt-level = 3 # 依存ライブラリ（Tauriなど）には最強の最適化をかける
